# graphics-lab-2

./: .gitignore  CMakeLists.txt  README.md  lab2.frag  lab2.vert  lab2start.cpp
common/: wrapper_glfw.cpp  wrapper_glfw.h
